loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: not found: value EAST
setDirection(EAST) 
             ^